--- a/src/views/productDetails.handlebars
+++ b/src/views/productDetails.handlebars
@@ -20,5 +20,11 @@
     <input type="number" name="quantity" id="quantity" value="1" min="1" required>
     <button type="submit">Agregar al carrito</button>
   </form>
+
+  <!-- Botón para ver el carrito -->
+  <a href="/views/carts/{{ cartId }}" role="button">Ver Carrito</a>
+
+  <!-- Botón para seguir comprando -->
+  <a href="/views/products" role="button">Seguir Comprando</a>
 </body>
 </html>
