--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -1,10 +1,3 @@
-<div>
-  <p>{{welcomeMessage}}</p>
-  <h2>
-    Listado de productos
-  </h2>
-</div>
-
 <div id="product-list">
   {{#each payload}}
     <div class="product">
@@ -16,6 +9,9 @@
       <p>Stock: {{this.stock}}</p>
       <p>Categoría: {{this.category}}</p>
       <p>Thumbnail: {{this.thumbnail}}</p>
+      
+      <!-- Agregar el botón de Detalle del Producto -->
+      <a href="/views/products/{{this._id}}" role="button">Detalle del Producto</a>
     </div>
   {{/each}}
 </div>
